Wordle - jump animation with correct word

--- a/src/index.scss
+++ b/src/index.scss
@@ -137,6 +137,10 @@ input {
   animation: flipRevealLetter 1.5s;
 }
 
+.word_row[data-correct-word-submitted="true"] .letter_tile {
+  animation: jumpCorrectInput 1.5s;
+}
+
 .letter_tile {
   display: flex;
   align-items: center;
@@ -226,6 +230,17 @@ input {
     transform: translateX(0);
   }
 }
+
+// For when the target word is correctly guessed during Wordle
+@keyframes jumpCorrectInput{
+  0%{ transform:translateY(0); }
+  20%{ transform:translateY(0); }
+  40%{ transform:translateY(-30px); }
+  50%{ transform:translateY(0); }
+  60%{ transform:translateY(-15px); }
+  80%{ transform:translateY(0); }
+  100%{ transform:translateY(0); }
+  }
 
 // The letter tiles of Countdown Letters
 .countdown-letters-wrapper .word_row .letter_tile,
